--- a/styles/style.css
+++ b/styles/style.css
@@ -81,9 +81,13 @@ nav li {
     margin: 0 auto;
 }
 
+.section {
+    margin-top: 130px;
+}
+
 /* about section style */
 .about {
-    margin-top: 130px;
+
     background: #FFF8F3;
     border-radius: 10px;
     padding: 130px 150px;
@@ -91,10 +95,10 @@ nav li {
 }
 
 .section-title {
-
+    text-align: center;
     font-weight: 700;
     font-size: 35px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
 }
 
 .section-description {
@@ -118,3 +122,31 @@ nav li {
     font-size: 20px;
     color: #757575;
 }
+
+/* what i do */
+
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skill-title {
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-description {
+    color: #757575;
+}
+
+/* resume styles */
